Added more exercises

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ $RECYCLE.BIN/
 /04-friday-exercises/bankCustomer/target/
 /04-friday-exercises/FridayExercise/target/
 /03-thursday-exercises/thursdayExercises/target/
+/01-tuesday-exercises/Flow2Week2ThursdayExercises/target/
+/03-thursday-exercises/Flow2Week2ThursdayExercises/target/
