--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ $RECYCLE.BIN/
 /03-thursday-exercises/thursdayExercises/target/
 /01-tuesday-exercises/Flow2Week2ThursdayExercises/target/
 /03-thursday-exercises/Flow2Week2ThursdayExercises/target/
+/04-friday-exercises/Flow2Week2FridayExercies/target/
